Finos perspective rollback from 1.3.5 to 1.3.4 (upstream) and offline resources

--- a/src/main/html/org/riekr/jloga/http/perspective/index.html
+++ b/src/main/html/org/riekr/jloga/http/perspective/index.html
@@ -11,7 +11,7 @@
 	<script type="module" src="perspective-viewer.js"></script>
 	<script type="module" src="perspective-viewer-datagrid.js"></script>
 	<script type="module" src="perspective-viewer-d3fc.js"></script>
-	<link rel="stylesheet" href="themes.css" />
+	<link rel="stylesheet" href="res/cdn.jsdelivr.net/npm/@finos/perspective-viewer/dist/css/themes.css" />
 
 	<!-- jloga -->
 	<script type="module" src="jloga.js"></script>
