Updated to perspective 2.2.1

--- a/src/main/html/org/riekr/jloga/http/perspective/index.html
+++ b/src/main/html/org/riekr/jloga/http/perspective/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<perspective-viewer theme="Material Dark"></perspective-viewer>
+	<perspective-viewer theme="Pro Dark"></perspective-viewer>
 </body>
 
 </html>
