--- a/src/main/html/org/riekr/jloga/http/perspective/index.html
+++ b/src/main/html/org/riekr/jloga/http/perspective/index.html
@@ -11,11 +11,11 @@
 	<script type="module" src="perspective-viewer.js"></script>
 	<script type="module" src="perspective-viewer-datagrid.js"></script>
 	<script type="module" src="perspective-viewer-d3fc.js"></script>
-	<link rel="stylesheet" href="res/cdn.jsdelivr.net/npm/@finos/perspective-viewer/dist/css/themes.css" />
+	<link rel="stylesheet" crossorigin="anonymous" href="res/cdn.jsdelivr.net/npm/@finos/perspective-viewer/dist/css/themes.css"/>
 
 	<!-- jloga -->
 	<script type="module" src="jloga.js"></script>
-	<link rel="stylesheet" href="jloga.css" />
+	<link rel="stylesheet" href="jloga.css"/>
 
 </head>
 
